fix the data type

--- a/used_vehicle.ipynb
+++ b/used_vehicle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c9f55fd",
+   "id": "cb4ee424",
    "metadata": {},
    "source": [
     "# Data Preparation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddb35c7",
+   "id": "a13f0c9a",
    "metadata": {},
    "source": [
     "## Import Library"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26eeec24",
+   "id": "67c8e751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef7fb2e",
+   "id": "b3a8b560",
    "metadata": {},
    "source": [
     "## Import Data"
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bc0ca7e0",
+   "execution_count": 2,
+   "id": "7f33fb77",
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1c1ab2a7",
+   "execution_count": 3,
+   "id": "53300080",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4          NaN    NaN               Gas  11.3L/100km         9.1L/100km  46989  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c3b5245e",
+   "execution_count": 4,
+   "id": "d7f37d28",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "4          NaN    NaN               Gas  11.3L/100km         9.1L/100km  46989  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a99d6dbd",
+   "id": "50b2093d",
    "metadata": {},
    "source": [
     "# Data Cleaning"
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ee04da",
+   "id": "268106bb",
    "metadata": {},
    "source": [
     "## Columns Information"
@@ -450,8 +450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3b63c82c",
+   "execution_count": 5,
+   "id": "9748cd3d",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bfdb60a",
+   "id": "f47c7c70",
    "metadata": {},
    "source": [
     "*Warning: Some of column name contains space in the beginning. Hence we will remove it*"
@@ -482,8 +482,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "0e08115f",
+   "execution_count": 6,
+   "id": "bc95f8e8",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b2f5fcd",
+   "id": "e55255d1",
    "metadata": {},
    "source": [
     "Columns Information\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8507d4d",
+   "id": "40e037a2",
    "metadata": {},
    "source": [
     "## Column Data Type"
@@ -540,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "ba788cd3",
+   "execution_count": 7,
+   "id": "3a0a4549",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1abdc68f",
+   "id": "6d01a948",
    "metadata": {},
    "source": [
     "Based on the columns information, `Kilometres`, `Doors`, `City`, and `Highway` should be a numeric data type. Let's inspect it one by one."
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a1d8e3d",
+   "id": "25d03821",
    "metadata": {},
    "source": [
     "### Kilometres Column"
@@ -596,8 +596,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ae193cb1",
+   "execution_count": 8,
+   "id": "9ce48062",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "Name: Kilometres, Length: 24198, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6d0355c",
+   "id": "ca5aaaa0",
    "metadata": {},
    "source": [
     "The problem is the data contains string 'km', hence pandas treat it as object data type. Let's check if all rows contains 'km'."
@@ -636,8 +636,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f10916e2",
+   "execution_count": 9,
+   "id": "2859436e",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "Name: Kilometres, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a8483ad",
+   "id": "8afdec57",
    "metadata": {},
    "source": [
     "All rows contains 'km', so we will remove it and then convert the column data type into float."
@@ -666,12 +666,398 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "94b83a0d",
+   "execution_count": 10,
+   "id": "5ddd6c5e",
    "metadata": {},
    "outputs": [],
    "source": [
     "full_data['Kilometres'] = full_data['Kilometres'].str.replace(' km', '').astype(float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e657072f",
+   "metadata": {},
+   "source": [
+    "### Doors Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a66a0100",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            NaN\n",
+       "1            NaN\n",
+       "2              4\n",
+       "3            NaN\n",
+       "4            NaN\n",
+       "          ...   \n",
+       "24193    5 doors\n",
+       "24194          5\n",
+       "24195    4 doors\n",
+       "24196    4 doors\n",
+       "24197    5 doors\n",
+       "Name: Doors, Length: 24198, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data['Doors']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "55658af8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4                     14313\n",
+       "2                      2907\n",
+       "4 doors                1004\n",
+       "5                       675\n",
+       "5 doors                 361\n",
+       "2 doors                 219\n",
+       "3                        89\n",
+       "3 doors                  39\n",
+       "Other/Donât Know        3\n",
+       "2.0                       1\n",
+       "Name: Doors, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data['Doors'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9300b846",
+   "metadata": {},
+   "source": [
+    "Same as previous column, the problem is there some rows contains string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bbc86ebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_data['Doors'] = pd.to_numeric(\n",
+    "    full_data['Doors'].str.replace(' doors', ''),\n",
+    "    errors='coerce'\n",
+    ").astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9a2f936",
+   "metadata": {},
+   "source": [
+    "Note: we use `pd.to_numeric` instead of `astype` like the previous one, it's because `pd.to_numeric` can handle invalid input i.e. `Other/Donât Know` and turn them into `NaN` value, after that we use `astype` to convert the data type into `Int64` because it can handle nullable int data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5679dd5",
+   "metadata": {},
+   "source": [
+    "### City Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7d0abb25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        12.2L/100km\n",
+       "1        12.6L/100km\n",
+       "2        11.0L/100km\n",
+       "3        11.0L/100km\n",
+       "4        11.3L/100km\n",
+       "            ...     \n",
+       "24193            NaN\n",
+       "24194            NaN\n",
+       "24195            NaN\n",
+       "24196            NaN\n",
+       "24197            NaN\n",
+       "Name: City, Length: 24198, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data['City']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "775857ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True    17835\n",
+       "Name: City, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data['City'].str.contains('100km').value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dbf2fa4",
+   "metadata": {},
+   "source": [
+    "It all contains '100km', just in case if some rows contains space, let's remove the space to make sure we can remove 'L/100km'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c9fabc69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        12.2\n",
+       "1        12.6\n",
+       "2        11.0\n",
+       "3        11.0\n",
+       "4        11.3\n",
+       "         ... \n",
+       "24193     NaN\n",
+       "24194     NaN\n",
+       "24195     NaN\n",
+       "24196     NaN\n",
+       "24197     NaN\n",
+       "Name: City, Length: 24198, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_no_str = full_data['City'].str.replace(' ', '').str.replace('L/100km', '')\n",
+    "\n",
+    "city_no_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0d640e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.8          482\n",
+       "9.8           478\n",
+       "11.5          466\n",
+       "7.8           420\n",
+       "11.0          374\n",
+       "             ... \n",
+       "4.8             1\n",
+       "6.4L-6.9        1\n",
+       "6.6L-7.1        1\n",
+       "12.6L-13.1      1\n",
+       "8.9L-9.0        1\n",
+       "Name: City, Length: 523, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_no_str.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9249412d",
+   "metadata": {},
+   "source": [
+    "It turns out some rows contains '-', let's take the last number and ditch the first number. Here is the implementation:\n",
+    "1. We split the string based on '-' and expand it to dataframe, so there will be 2 columns, we store it in variable called `city_split`\n",
+    "2. The rows that doesn't contains '-', their column 1 would be null, hence we use it as `city_mask`\n",
+    "3. We filter the splitted data and shift the data in column 0 to column 1\n",
+    "4. Finally we only take the column 1 and convert it to float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "695aeb3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 1\n",
+    "city_split = city_no_str.str.split('-', expand=True)\n",
+    "\n",
+    "# step 2\n",
+    "city_mask = city_split[1].isnull()\n",
+    "\n",
+    "# step 3\n",
+    "city_split[city_mask] = city_split[city_mask].shift(axis=1)\n",
+    "\n",
+    "# step 4\n",
+    "full_data['City'] = city_split[1].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d628784b",
+   "metadata": {},
+   "source": [
+    "### Highway Column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e582b0ef",
+   "metadata": {},
+   "source": [
+    "Since this columns similar to `City` column, we will perform the same steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b05f23d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        9.0L - 9.5L/100km\n",
+       "1               9.0L/100km\n",
+       "2               8.6L/100km\n",
+       "3               8.6L/100km\n",
+       "4               9.1L/100km\n",
+       "               ...        \n",
+       "24193                  NaN\n",
+       "24194                  NaN\n",
+       "24195                  NaN\n",
+       "24196                  NaN\n",
+       "24197                  NaN\n",
+       "Name: Highway, Length: 24198, dtype: object"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data['Highway']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "0846bc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highway_no_str = full_data['Highway'].str.replace(' ', '').str.replace('L/100km', '')\n",
+    "\n",
+    "# step 1\n",
+    "highway_split = highway_no_str.str.split('-', expand=True)\n",
+    "\n",
+    "# step 2\n",
+    "highway_mask = highway_split[1].isnull()\n",
+    "\n",
+    "# step 3\n",
+    "highway_split[highway_mask] = highway_split[highway_mask].shift(axis=1)\n",
+    "\n",
+    "# step 4\n",
+    "full_data['Highway'] = highway_split[1].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d624cca8",
+   "metadata": {},
+   "source": [
+    "All done! Let's check the data type again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "6457b240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 24198 entries, 0 to 24197\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Year            24198 non-null  int64  \n",
+      " 1   Make            24198 non-null  object \n",
+      " 2   Model           24198 non-null  object \n",
+      " 3   Kilometres      23965 non-null  float64\n",
+      " 4   BodyType        22968 non-null  object \n",
+      " 5   Engine          22136 non-null  object \n",
+      " 6   Transmission    22854 non-null  object \n",
+      " 7   Drivetrain      22967 non-null  object \n",
+      " 8   ExteriorColour  23182 non-null  object \n",
+      " 9   InteriorColour  16418 non-null  object \n",
+      " 10  Passengers      12025 non-null  float64\n",
+      " 11  Doors           19608 non-null  Int64  \n",
+      " 12  FuelType        23464 non-null  object \n",
+      " 13  City            17835 non-null  float64\n",
+      " 14  Highway         17835 non-null  float64\n",
+      " 15  Price           24198 non-null  int64  \n",
+      "dtypes: Int64(1), float64(4), int64(2), object(9)\n",
+      "memory usage: 3.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_data.info()"
    ]
   }
  ],
